[project]
name = "flag_attn"
dynamic = ["version"]
authors = [
    {name = "Chen Feiyu", email = "iclementine@outlook.com"},
]
description = "A collection of memory efficient attention operators implemented in triton language."
readme = {file= "README.md", content-type="text/markdown"}
requires-python = ">=3.7"
license = {text = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.2.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.0",
]

[project.urls]
homepage = "https://github.com/FlagOpen/FlagAttention"


[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/flag_attn/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flag_attn"]
namespaces = false

# helps for setting up pytest in pyprojects
# https://docs.pytest.org/en/7.3.x/reference/customize.html#rootdir
# https://docs.pytest.org/en/7.3.x/reference/reference.html#confval-pythonpath
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
    "tests/flag_attn",
]

[tool.ruff]
ignore = ["E741"]
line-length = 120
